force-app/main/default/objects/Pledge__c/Pledge__c.object-meta.xml
<CustomObject>
    <label>Pledge</label>
    <nameField>
        <label>Pledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pledges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>