force-app/main/default/objects/Pledge__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Member__r.Company__r.Name</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>