force-app/main/default/objects/Pledge__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Member__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>