force-app/main/default/objects/Pledge__c/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <formula>IF( ISNULL(Pledge_Probability__c) ,  Amount__c  , Amount__c * Pledge_Probability__c)</formula>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>