force-app/main/default/objects/Pledge__c/fields/Last_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Note__c</fullName>
    <inlineHelpText>Last Call Note</inlineHelpText>
    <label>Last Note</label>
    <type>TextArea</type>
</CustomField>