force-app/main/default/objects/Pledge__c/fields/Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment__c</fullName>
    <label>Last Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>