force-app/main/default/objects/Pledge__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <inlineHelpText>Searchable Member Name</inlineHelpText>
    <label>Member Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>