force-app/main/default/objects/Pledge__c/fields/Needs_Attention__c.field-meta.xml
<CustomField>
    <fullName>Needs_Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Attention</label>
    <type>Checkbox</type>
</CustomField>