force-app/main/default/objects/Pledge__c/fields/Nex_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Nex_Call_Date__c</fullName>
    <label>Nex Call Date</label>
    <type>Date</type>
</CustomField>