force-app/main/default/objects/Pledge__c/fields/Pay_Status__c.field-meta.xml
<CustomField>
    <fullName>Pay_Status__c</fullName>
    <label>Pay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>Card Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>