force-app/main/default/objects/Pledge__c/fields/Payment_Card__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card__c</fullName>
    <formula>Member__r.Payment_Card__c</formula>
    <label>Payment Card</label>
    <type>Checkbox</type>
</CustomField>