force-app/main/default/objects/Pledge__c/fields/Payment_Occurance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Occurance__c</fullName>
    <label>Payment Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
                <default>true</default>
                <label>One-Time</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Several Times</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>