force-app/main/default/objects/Pledge__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Member__r.Phone__c</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>