force-app/main/default/objects/Pledge__c/fields/Pledge_Completion__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Completion__c</fullName>
    <formula>IF(Expected_Amount__c&gt;0, Total_Paymentss__c /  Expected_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>