force-app/main/default/objects/Pledge__c/fields/Pledge_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pledge_End_Date__c</fullName>
    <formula>Yearly_Campaign__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge End Date</label>
    <type>Date</type>
</CustomField>