force-app/main/default/objects/Pledge__c/fields/Pledge_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge Owner</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Pledges</relationshipName>
    <type>Lookup</type>
</CustomField>