force-app/main/default/objects/Pledge__c/fields/Pledge_Probability__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Probability__c</fullName>
    <label>Pledge Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>