force-app/main/default/objects/Pledge__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <formula>IF(Expected_Amount__c  -  Total_Paymentss__c&lt;0, 0, Expected_Amount__c  -  Total_Paymentss__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>