force-app/main/default/objects/Pledge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <isActive>false</isActive>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
                <isActive>false</isActive>
                <label>Partially Paid</label>
            </value>
            <value>
                <fullName>Payment Started</fullName>
                <isActive>false</isActive>
                <label>Payment Started</label>
            </value>
            <value>
                <fullName>Pledged</fullName>
                <isActive>false</isActive>
                <label>Pledged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>