force-app/main/default/objects/Pledge__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Pledges</relationshipName>
    <type>Lookup</type>
</CustomField>