force-app/main/default/objects/Pledge__c/fields/Total_Paymentss__c.field-meta.xml
<CustomField>
    <fullName>Total_Paymentss__c</fullName>
    <label>Total Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>