force-app/main/default/objects/Pledge__c/fields/Yearly_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Campaign__c</fullName>
    <label>Yearly Campaign</label>
    <referenceTo>Yearly_Campaign__c</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Pledges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>