force-app/main/default/objects/Pledge__c/listViews/Active_Pledge_Overview.listView-meta.xml
<ListView>
    <fullName>Active_Pledge_Overview</fullName>
    <columns>NAME</columns>
    <columns>Expected_Amount__c</columns>
    <columns>Total_Paymentss__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Pay_Status__c</columns>
    <columns>Last_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Remaining_Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Active Pledge Overview</label>
</ListView>