force-app/main/default/objects/Pledge__c/listViews/Active_Pledges.listView-meta.xml
<ListView>
    <fullName>Active_Pledges</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Expected_Amount__c</columns>
    <columns>Total_Paymentss__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Pledges</label>
</ListView>