force-app/main/default/objects/Pledge__c/listViews/All_Pledges.listView-meta.xml
<ListView>
    <fullName>All_Pledges</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Expected_Amount__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Phone__c</columns>
    <columns>Note__c</columns>
    <columns>Pledge_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Pledges</label>
</ListView>