force-app/main/default/objects/Pledge__c/listViews/Cash_Payments.listView-meta.xml
<ListView>
    <fullName>Cash_Payments</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Payment_Method__c</field>
        <operation>equals</operation>
        <value>Cash</value>
    </filters>
    <filters>
        <field>Monthly_Payment__c</field>
        <operation>equals</operation>
    </filters>
    <label>Cash Payments</label>
</ListView>