force-app/main/default/objects/Pledge__c/listViews/Credit_Card_Payments.listView-meta.xml
<ListView>
    <fullName>Credit_Card_Payments</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Total_Paymentss__c</columns>
    <columns>Email__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Method__c</field>
        <operation>equals</operation>
        <value>Credit Card</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Credit Card Payments</label>
</ListView>