force-app/main/default/objects/Pledge__c/listViews/Ended_Pledges.listView-meta.xml
<ListView>
    <fullName>Ended_Pledges</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Expected_Amount__c</columns>
    <columns>Total_Paymentss__c</columns>
    <columns>Remaining_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ended</value>
    </filters>
    <label>Ended Pledges</label>
</ListView>