force-app/main/default/objects/Pledge__c/listViews/Gold_Pledges.listView-meta.xml
<ListView>
    <fullName>Gold_Pledges</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>lessThan</operation>
        <value>5000</value>
    </filters>
    <filters>
        <field>Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Credit Card</value>
    </filters>
    <filters>
        <field>Remaining_Balance__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Gold Pledges</label>
</ListView>