force-app/main/default/objects/Pledge__c/listViews/Recent_Activites.listView-meta.xml
<ListView>
    <fullName>Recent_Activites</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Total_Paymentss__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>LAST_ACTIVITY</field>
        <operation>greaterThan</operation>
        <value>5/1/2023</value>
    </filters>
    <label>Recent Activites</label>
</ListView>